# basyx-cpp-components

./: CMakeLists.txt
src/api/: CMakeLists.txt
src/api/basyx/api/: aas_api.h
src/api/basyx/api/impl/: aas_env_api.h
src/http/: CMakeLists.txt
src/http/basyxpp-http/: HttpHandler.cpp  main.cpp
tests/api_unit_tests/: CMakeLists.txt  test_aas_env.cpp
tests/basyxpp-http-tests/: tests_misc.cpp
